--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 A set of tools, scripts and configs used for PostgreSQL WAL replication HA cluster.
 
-Nothing here should, in now way, be treated as a working solution. It serves my needs and maybe it may be helpful to somebody else.
+Nothing here should, in any way, be treated as a working solution. It serves my needs and maybe it may be helpful to somebody else.
